--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/javascript-node
 {
+	"github":,
 	"name": "Node.js",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/javascript-node:0-18-bullseye",
@@ -28,7 +29,7 @@
 	"portsAttributes": {
 		"3000": {
 			"label": "Hello Remote World",
-			"onAutoForward": "notify"
+			"onAutoForward": "openBrowser"
 		}
 	},
 
